# routes/api.php
@@ -15,6 +15,7 @@ Route::get('/advisors/suggestions', [AdvisorSearchController::class, 'suggestion
 Route::get('/advisors/search', [AdvisorSearchController::class, 'search']);
 Route::get('/advisors/details', [AdvisorSearchController::class, 'details']);
 Route::get('/advisors/featured', [AdvisorSearchController::class, 'featured']);
+Route::get('/advisors/{slug}', [AdvisorSearchController::class, 'showBySlug']);
 
 // Rutas protegidas (requieren autenticación)
 Route::middleware('auth:sanctum')->group(function () {
